stacks/capacitor/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: capacitor
  namespace: flux-system
spec:
  parentRefs:
    - kind: Gateway
      name: traefik-gateway
      namespace: gateway
  hostnames:
    - flux.localhost
  rules:
    - backendRefs:
        - kind: Service
          name: capacitor
          port: 9000
